--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,3 +21,4 @@ export(Spatial.Reconstruction)
 export(Splitting.Reconstruction)
 export(Torus.Translation)
 importFrom(foreach,"%dopar%")
+importFrom(magrittr,"%>%")
