Changes to Create_simulation_pattern
Added function to create simulation_species used by created_simulation_pattern

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(Aggregate.Result.List)
 export(Calculate.Energy)
 export(Create.Simulation.Pattern)
+export(Create.Simulation.Species)
 export(Gest.Multi)
 export(Habitat.Classification)
 export(Habitat.Randomization)
