--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,6 @@ export(Simultaneously.Reconstruction)
 export(Spatial.Reconstruction)
 export(Splitting.Reconstruction)
 export(Torus.Translation)
+importFrom(doRNG,"%dorng%")
 importFrom(foreach,"%dopar%")
 importFrom(magrittr,"%>%")
