--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,26 +12,19 @@ Encoding: UTF-8
 LazyData: true
 Imports:
   classInt,
-  cli,
   doFuture,
-  doRNG,
-  doSNOW,
   dplyr,
-  ggplot2,
   future,
   foreach,
+  ggplot2,
   magrittr,
   maptools,
   parallel,
-  plyr,
-  utils,
+  purrr,
   raster,
-  reshape2,
-  rgeos,
   sp,
-  spatstat, 
-  stats,
-  tibble,
+  spatstat,
+  tibble, 
   tidyr
 RoxygenNote: 6.0.1.9000
 
