Detection.Habitat.Associations
New function the get the correct number of detections

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(Aggregate.Result.List)
 export(Calculate.Energy)
 export(Create.Simulation.Pattern)
 export(Create.Simulation.Species)
+export(Detection.Habitat.Association)
 export(Extract.Points)
 export(Gest.Multi)
 export(Habitat.Classification)
