Removed functions and added Gamma.Test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,8 @@
 export("%>%")
 export(Aggregate.Result.List)
 export(Calculate.Energy)
-export(Create.Simulation.Pattern)
-export(Create.Simulation.Species)
-export(Detection.Habitat.Association)
 export(Extract.Points)
+export(Gamma.Test)
 export(Gest.Multi)
 export(Habitat.Classification)
 export(Habitat.Randomization)
@@ -15,7 +13,7 @@ export(Mean.Energy)
 export(Pattern.Reconstruction)
 export(Pcf.Fast)
 export(Pcf.Multi)
-export(Plot.Reconstructed.Pattern)
+export(Plot.Randomized.Pattern)
 export(Randomization.Algorithm)
 export(Results.Habitat.Association)
 export(Select.Species)
