--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,3 +22,6 @@ export(Spatial.Reconstruction)
 export(Splitting.Reconstruction)
 export(Torus.Translation)
 importFrom(magrittr,"%>%")
+importFrom(stats,na.omit)
+importFrom(stats,runif)
+importFrom(stats,setNames)
