--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: person("Maximilian H.K.", "Hesselbarth", email = "maximilian.hesselba
 Description:
   The package contains functions to analyse species habitat associations based on Plotkin et al. (2000) and Harms et al. (2001).
   Therefore, information about the location of all individuals and about environmental data is needed.
-License: GPL-3
+License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
@@ -23,8 +23,10 @@ Imports:
   sp,
   spatstat,
   tibble, 
-  tidyr
+  tidyr,
+  stats
 RoxygenNote: 6.0.1.9000
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
+  spatstat.data
 VignetteBuilder: knitr
