--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,9 @@ Imports:
   tidyr,
   stats
 RoxygenNote: 6.0.1.9000
-Suggests: knitr,
-    rmarkdown,
-  spatstat.data
+Suggests:
+  knitr,
+  rmarkdown,
+  spatstat.data,
+  covr
 VignetteBuilder: knitr
