--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,8 +27,9 @@ Imports:
   stats
 RoxygenNote: 6.0.1.9000
 Suggests:
-  knitr,
-  rmarkdown,
-  spatstat.data,
-  covr
+    knitr,
+    rmarkdown,
+    spatstat.data,
+    covr,
+    testthat
 VignetteBuilder: knitr
