--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,19 +8,19 @@ export(Gamma.Test)
 export(Gest.Multi)
 export(Habitat.Classification)
 export(Habitat.Randomization)
-export(Labeling.Reconstruction)
 export(Mean.Energy)
-export(Pattern.Reconstruction)
 export(Pcf.Fast)
 export(Pcf.Multi)
 export(Plot.Randomized.Pattern)
 export(Randomization.Algorithm)
 export(Results.Habitat.Association)
 export(Select.Species)
-export(Simultaneously.Reconstruction)
-export(Spatial.Reconstruction)
-export(Splitting.Reconstruction)
 export(Torus.Translation)
+export(reconstruct_labeling)
+export(reconstruct_pattern)
+export(reconstruct_simultaneously)
+export(reconstruct_spatial)
+export(reconstruct_splitting)
 importFrom(magrittr,"%>%")
 importFrom(stats,na.omit)
 importFrom(stats,runif)
