--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,22 +5,22 @@ export(Aggregate.Result.List)
 export(Calculate.Energy)
 export(Extract.Points)
 export(Gamma.Test)
-export(Gest.Multi)
 export(Habitat.Classification)
 export(Habitat.Randomization)
 export(Mean.Energy)
-export(Pcf.Fast)
-export(Pcf.Multi)
 export(Plot.Randomized.Pattern)
 export(Randomization.Algorithm)
 export(Results.Habitat.Association)
-export(Select.Species)
 export(Torus.Translation)
+export(estimate_gest_multi)
+export(estimate_pcf_fast)
+export(estimate_pcf_multi)
 export(reconstruct_labeling)
 export(reconstruct_pattern)
 export(reconstruct_simultaneously)
 export(reconstruct_spatial)
 export(reconstruct_splitting)
+export(select_species)
 importFrom(magrittr,"%>%")
 importFrom(stats,na.omit)
 importFrom(stats,runif)
