--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,19 @@
 
 export("%>%")
 export(Aggregate.Result.List)
-export(Calculate.Energy)
 export(Extract.Points)
-export(Gamma.Test)
 export(Habitat.Classification)
 export(Habitat.Randomization)
-export(Mean.Energy)
-export(Plot.Randomized.Pattern)
 export(Randomization.Algorithm)
 export(Results.Habitat.Association)
 export(Torus.Translation)
+export(calculate_energy)
+export(calculate_mean_energy)
 export(estimate_gest_multi)
 export(estimate_pcf_fast)
 export(estimate_pcf_multi)
+export(fit_point_process)
+export(plot_randomized_pattern)
 export(reconstruct_labeling)
 export(reconstruct_pattern)
 export(reconstruct_simultaneously)
