Bugfix: fitted pattern must have more than n > 0 points

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export("%>%")
 export(Habitat.Randomization)
 export(Randomization.Algorithm)
-export(Results.Habitat.Association)
 export(Torus.Translation)
 export(aggregate_result_list)
 export(calculate_energy)
@@ -20,6 +19,7 @@ export(reconstruct_pattern)
 export(reconstruct_simultaneously)
 export(reconstruct_spatial)
 export(reconstruct_splitting)
+export(results_habitat_association)
 export(select_species)
 importFrom(magrittr,"%>%")
 importFrom(stats,na.omit)
