--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,12 @@
 Package: SHAR
 Type: Package
 Title: Functions to analyse species-habitat associations
-Version: 1.0.1
-Authors@R: person("Maximilian H.K.", "Hesselbarth", email = "maximilian.hesselbarth@uni-goettingen.de",
-  role = c("aut", "cre"))
+Version: 0.1
+Authors@R: c(person("Maximillian H.K.", "Hesselbarth", email = "maximilian.hesselbarth@uni-goettingen.de",
+             role = c("aut", "cre"), comment = c(ORCID = "0000-0003-1125-9918")),
+             person("Marco", "Sciaini", email = "sciaini.marco@gmail.com",
+             role = "aut", comment = c(ORCID = '0000-0002-3042-5435')))
+Maintainer: Maximillian H.K. Hesselbarth <maximilian.hesselbarth@uni-goettingen.de>
 Description:
   The package contains functions to analyse species habitat associations based on Plotkin et al. (2000) and Harms et al. (2001).
   Therefore, information about the location of all individuals and about environmental data is needed.
@@ -15,20 +18,13 @@ Imports:
   dplyr,
   ggplot2,
   mobsim,
-  magrittr,
-  maptools,
-  purrr,
   raster,
   sp,
   spatstat,
-  tibble, 
-  tidyr,
-  stats
 RoxygenNote: 6.1.0
 Suggests:
-    knitr,
-    rmarkdown,
-    spatstat.data,
     covr,
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 VignetteBuilder: knitr
