--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(classify_habitats)
 export(estimate_pcf_fast)
 export(extract_points)
 export(plot_randomized_pattern)
-export(randomization_algorithm)
+export(randomize_raster)
 export(reconstruct_pattern)
 export(results_habitat_association)
 export(translate_raster)
