Add fast point process fitting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calculate_mean_energy)
 export(classify_habitats)
 export(estimate_pcf_fast)
 export(extract_points)
+export(fit_point_process)
 export(plot_randomized_pattern)
 export(randomize_raster)
 export(reconstruct_pattern)
