--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ Description:
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Depends: 
+  R (>= 3.1)
 Imports:
   classInt,
   dplyr,
