--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,7 @@ Description:
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Depends: 
-  R (>= 3.1)
+Depends: R (>= 3.1)
 Imports:
   classInt,
   dplyr,
