--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,14 +1,11 @@
+man/figures
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^\.travis\.yml$
-^README.*$
-^NOTES.*$
-^notes.*$
-^CONDUCT\.md$
-^cran-comments\.md$
-^docs$
-^README\.Rmd$
-^codecov\.yml$
-^_pkgdown\.yml$
-^data-raw$
-^README-.*\.png$
+^.travis.yml
+README.Rmd
+_pkgdown.yml
+codecov.yml
+data-raw
+docs
+cran-comments.md
+LICENSE
