--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,9 @@ Authors@R: c(person("Maximillian H.K.", "Hesselbarth", email = "maximilian.hesse
              role = "aut", comment = c(ORCID = '0000-0002-3042-5435')))
 Maintainer: Maximillian H.K. Hesselbarth <maximilian.hesselbarth@uni-goettingen.de>
 Description:
-  This package allows to analyzing species-habitat associations in R. Therefore, information 
-  about the location of the species is needed and about the environmental conditions. 
-  To test for significance habitat associations, one of the two components is randomized.
+  Analyse species-habitat associations in R. Therefore, information about the 
+  location of the species is needed and about the environmental conditions. To test 
+  for significance habitat associations, one of the two components is randomized. 
   Methods are described in Plotkin et al. (2000), Harms et al. (2001) and Wiegand & Moloney (2014). 
   SHAR is mainly based on the 'spatstat' (Baddeley et al. 2015) and 'raster' (Hijmans 2017) package.
 License: GPL-3
@@ -25,7 +25,7 @@ Imports:
   spatstat,
   stats, 
   utils
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
 Suggests:
     covr,
     testthat,
