--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,7 @@
-pandoc: 2.1.3
-pkgdown: 1.0.0
+pandoc: 2.3.1
+pkgdown: 1.3.0
 pkgdown_sha: ~
-articles: []
+articles:
+  background: background.html
+  publication_record: publication_record.html
 
