--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,16 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: r
+language: R
 sudo: false
-dist: trusty
 cache: packages
-latex: false
-warnings_are_errors: false
 
-matrix:
-  include:
-    - os: linux
-    - os: osx
-      osx_image: xcode9.2
-      before_install:
-        - brew install curl
-        - brew link --force curl
+r_packages:
+  - covr
 
 after_success:
-  - Rscript -e 'covr::codecov(branch = "develop")'
+  - Rscript -e 'covr::codecov()'
 
 notifications:
   email:
   on_success: change
-on_failure: change
+  on_failure: change
