--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,17 +1,13 @@
-^appveyor\.yml$
-^codecov\.yml$
-^\.travis\.yml$
-^README\.Rmd$
-^docs$
-^_pkgdown\.yml$
-^CODE_OF_CONDUCT\.md$
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^.travis.yml
-README.Rmd
-_pkgdown.yml
-codecov.yml
-data-raw
-docs
-cran-comments.md
-LICENSE
+^README.*$
+^cran-comments\.md$
+^docs$
+^CODE_OF_CONDUCT.*$
+^LICENSE.*$
+^vignettes/articles$
+^data-raw$
+^_pkgdown\.yml$
+^appveyor\.yml$
+^\.travis\.yml$
+^codecov\.yml$
