--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,8 @@ Description:
   Methods are described in Plotkin et al. (2000), Harms et al. (2001) and Wiegand & Moloney (2014). 
   SHAR is mainly based on the 'spatstat' (Baddeley et al. 2015) and 'raster' (Hijmans 2017) package.
 License: GPL-3
-URL: https://github.com/mhesselbarth/SHAR
-BugReports: https://github.com/mhesselbarth/SHAR/issues
+URL: https://github.com/r-spatialecology/SHAR
+BugReports: https://github.com/r-spatialecology/SHAR/issues
 Depends: R (>= 3.1)
 Imports:
   classInt,
