--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(extract_points)
 export(fit_point_process)
 export(plot_randomized_pattern)
 export(randomize_raster)
+export(reconstruct_marks)
 export(reconstruct_pattern)
 export(results_habitat_association)
 export(translate_raster)
