--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description:
   location of the species is needed and about the environmental conditions. To test 
   for significance habitat associations, one of the two components is randomized.
 License: GPL-3
-URL: https://github.com/r-spatialecology/SHAR
+URL: https://r-spatialecology.github.io/SHAR
 BugReports: https://github.com/r-spatialecology/SHAR/issues
 Depends: R (>= 3.1)
 Imports:
