--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Package
-Package: SHAR
-Title: Species-Habitat Associations in R
+Package: shar
+Title: Species-Habitat Associations
 Version: 0.1
 Authors@R: c(person("Maximillian H.K.", "Hesselbarth", email = "maximilian.hesselbarth@uni-goettingen.de",
              role = c("aut", "cre"), comment = c(ORCID = "0000-0003-1125-9918")),
@@ -10,10 +10,12 @@ Maintainer: Maximillian H.K. Hesselbarth <maximilian.hesselbarth@uni-goettingen.
 Description:
   Analyse species-habitat associations in R. Therefore, information about the 
   location of the species is needed and about the environmental conditions. To test 
-  for significance habitat associations, one of the two components is randomized.
+  for significance habitat associations, one of the two components is randomized. 
+  Methods are mainly based on Plotkin et al. (2000) <doi:10.1006/jtbi.2000.2158> and 
+  Harms et al. (2001) <doi:10.1111/j.1365-2745.2001.00615.x>.
 License: GPL-3
-URL: https://r-spatialecology.github.io/SHAR
-BugReports: https://github.com/r-spatialecology/SHAR/issues
+URL: https://r-spatialecology.github.io/shar
+BugReports: https://github.com/r-spatialecology/shar/issues
 Depends: R (>= 3.1)
 Imports:
   classInt,
