--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,13 +19,15 @@ BugReports: https://github.com/r-spatialecology/shar/issues
 Depends: R (>= 3.1)
 Imports:
   classInt,
-  dplyr,
   graphics,
   raster,
-  spatstat
+  spatstat, 
+  stats,
+  utils
 RoxygenNote: 6.1.1
 Suggests:
     covr,
+    dplyr,
     testthat,
     knitr,
     rmarkdown
