Starting to work on 0.2.1 (mainly small speed improvments to reconstruct_pattern)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,5 @@ export(reconstruct_marks)
 export(reconstruct_pattern)
 export(results_habitat_association)
 export(translate_raster)
+importFrom(Rcpp,sourceCpp)
+useDynLib(shar, .registration = TRUE)
