--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: shar
 Title: Species-Habitat Associations
-Version: 0.2
+Version: 0.2.1
 Authors@R: c(person("Maximillian H.K.", "Hesselbarth", email = "maximilian.hesselbarth@uni-goettingen.de",
              role = c("aut", "cre"), comment = c(ORCID = "0000-0003-1125-9918")),
              person("Marco", "Sciaini", email = "sciaini.marco@gmail.com",
@@ -18,12 +18,13 @@ URL: https://r-spatialecology.github.io/shar
 BugReports: https://github.com/r-spatialecology/shar/issues
 Depends: R (>= 3.1)
 Imports:
-  classInt,
-  graphics,
-  raster,
-  spatstat, 
-  stats,
-  utils
+    classInt,
+    graphics,
+    raster,
+    spatstat,
+    stats,
+    utils,
+    Rcpp
 RoxygenNote: 6.1.1
 Suggests:
     covr,
@@ -34,3 +35,5 @@ Suggests:
 VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
+LinkingTo: 
+    Rcpp
