Export rcpp_sample

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(extract_points)
 export(fit_point_process)
 export(plot_randomized_pattern)
 export(randomize_raster)
+export(rcpp_sample)
 export(reconstruct_marks)
 export(reconstruct_pattern)
 export(results_habitat_association)
