plot_randomized_raster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(estimate_pcf_fast)
 export(extract_points)
 export(fit_point_process)
 export(plot_randomized_pattern)
+export(plot_randomized_raster)
 export(randomize_raster)
 export(rcpp_sample)
 export(reconstruct_marks)
