--- a/codecov.yml
+++ b/codecov.yml
@@ -4,9 +4,5 @@ coverage:
   status:
     project:
       default:
-        target: auto
-        threshold: 1%
-    patch:
-      default:
-        target: auto
+        target: 85
         threshold: 1%
