Add targer codecov

--- a/codecov.yml
+++ b/codecov.yml
@@ -4,5 +4,9 @@ coverage:
   status:
     project:
       default:
-        target: 85
+        target: 85%
+        threshold: 1%
+    patch:
+      default:
+        target: 85%
         threshold: 1%
