--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,4 +2,55 @@ title: shar | Species-habitat associations in R
 
 template:
   params:
-   bootswatch: sandstone
+    bootswatch: sandstone
+
+reference:
+  - title: Data sets
+    contents:
+      - species_a
+      - species_b
+  - title: Randomize data
+    contents:
+      - fit_point_process
+      - randomize_raster
+      - reconstruct_marks
+      - reconstruct_pattern
+      - translate_raster
+  - title: Analyse results
+    contents:
+      - calculate_energy
+      - plot_randomized_pattern
+      - plot_randomized_raster
+      - results_habitat_association
+  - title: Various
+    contents:
+      - classify_habitats
+      - create_neighbourhood
+      - estimate_pcf_fast
+      - extract_points
+
+navbar:
+  title: shar
+  left:
+    - icon: fa-gears
+      text: "Functions"
+      href: reference/index.html
+    - text: "More"
+      icon: fa-graduation-cap
+      menu:
+       - text: "General Background"
+         icon: fa-book
+         href: articles/background.html
+       - text: "Reconstruct multiple pattern"
+         icon: fa-book
+         href: articles/reconstruct_multiple_patterns.html
+       - text: "Publication Record"
+         icon: fa-file-text-o
+         href: articles/publication_record.html
+  right:
+    - icon: fa-newspaper-o
+      text: "news"
+      href: news/index.html
+    - icon: fa-github fa-lg
+      text: "github"
+      href: https://github.com/r-spatialecology/shar
