--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,7 +2,8 @@ pandoc: 2.7.1
 pkgdown: 1.3.0
 pkgdown_sha: ~
 articles:
-  background: background.html
-  publication_record: publication_record.html
-  reconstruct_multiple_patterns: reconstruct_multiple_patterns.html
+  background: articles/background.html
+  publication_record: articles/publication_record.html
+  reconstruct_multiple_patterns: articles/reconstruct_multiple_patterns.html
+  get_started: get_started.html
 
