--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,10 @@ export(plot_randomized_pattern)
 export(plot_randomized_raster)
 export(randomize_raster)
 export(rcpp_sample)
-export(reconstruct_marks)
-export(reconstruct_pattern)
+export(reconstruct_pattern_cluster)
+export(reconstruct_pattern_hetero)
+export(reconstruct_pattern_homo)
+export(reconstruct_pattern_marks)
 export(results_habitat_association)
 export(translate_raster)
 importFrom(Rcpp,sourceCpp)
