--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Type: Package
 Package: shar
 Title: Species-Habitat Associations
 Version: 1.1.1
-Authors@R: c(person("Maximillian H.K.", "Hesselbarth", email = "maximilian.hesselbarth@uni-goettingen.de",
+Authors@R: c(person("Maximillian H.K.", "Hesselbarth", email = "mhk.hesselbarth@gmail.com",
              role = c("aut", "cre"), comment = c(ORCID = "0000-0003-1125-9918")),
              person("Marco", "Sciaini", email = "sciaini.marco@gmail.com",
              role = "aut", comment = c(ORCID = '0000-0002-3042-5435')))
-Maintainer: Maximillian H.K. Hesselbarth <maximilian.hesselbarth@uni-goettingen.de>
+Maintainer: Maximillian H.K. Hesselbarth <mhk.hesselbarth@gmail.com>
 Description:
   Analyse species-habitat associations in R. Therefore, information about the 
   location of the species is needed and about the environmental conditions. To test 
