--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description:
   for significance habitat associations, one of the two components is randomized. 
   Methods are mainly based on Plotkin et al. (2000) <doi:10.1006/jtbi.2000.2158> and 
   Harms et al. (2001) <doi:10.1111/j.1365-2745.2001.00615.x>.
-License: GPL-3
+License: MIT + file LICENSE
 URL: https://r-spatialecology.github.io/shar
 BugReports: https://github.com/r-spatialecology/shar/issues
 Depends: R (>= 3.1)
