:white_check_mark: Update branch name GitHub actions

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -3,11 +3,11 @@
 on:
   push:
     branches:
-      - master
+      - main
       - CRAN
   pull_request:
     branches:
-      - master
+      - main
       - CRAN
 
 name: R-CMD-check
