--- a/.github/workflows/Test-coverage.yaml
+++ b/.github/workflows/Test-coverage.yaml
@@ -1,11 +1,11 @@
 on:
   push:
     branches:
-      - master
+      - main
       - CRAN
   pull_request:
     branches:
-      - master
+      - main
       - CRAN
 
 name: Test-coverage
