Fix redirection issue

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,8 @@ Description:
   Methods are mainly based on Plotkin et al. (2000) <doi:10.1006/jtbi.2000.2158> and 
   Harms et al. (2001) <doi:10.1111/j.1365-2745.2001.00615.x>.
 License: GPL (>= 3)
-URL: https://r-spatialecology.github.io/shar
-BugReports: https://github.com/r-spatialecology/shar/issues
+URL: https://r-spatialecology.github.io/shar/
+BugReports: https://github.com/r-spatialecology/shar/issues/
 Depends: R (>= 3.1)
 Imports:
     classInt,
