:sparkles: openjournals/joss-reviews#3811 Adding list_to_randomized to allow parallelization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(create_neighbourhood)
 export(estimate_pcf_fast)
 export(extract_points)
 export(fit_point_process)
+export(list_to_randomized)
 export(plot_energy)
 export(plot_randomized_pattern)
 export(plot_randomized_raster)
