--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,7 @@ export(plot_energy)
 export(plot_randomized_pattern)
 export(plot_randomized_raster)
 export(randomize_raster)
-export(reconstruct_pattern_cluster)
-export(reconstruct_pattern_hetero)
-export(reconstruct_pattern_homo)
+export(reconstruct_pattern)
 export(reconstruct_pattern_marks)
 export(results_habitat_association)
 export(translate_raster)
