:lipstick: Update some examples related to reconstruct_pattern

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,7 +12,6 @@ reference:
       - landscape
       - gamma_test
       - reconstruction
-      - reconstruct_pattern_marks
       - random_walk
       - torus_trans
   - title: Randomize data
@@ -25,9 +24,10 @@ reference:
   - title: Analyse results
     contents:
       - calculate_energy
-      - plot_randomized_pattern
-      - plot_randomized_raster
       - plot_energy
+      - plot.rd_mar
+      - plot.rd_pat
+      - plot.rd_ras
       - results_habitat_association
   - title: Various
     contents:
