--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Suggests:
     future.apply,
     knitr, 
     rmarkdown,
+    spatstat,
     testthat (>= 2.1.0)
 VignetteBuilder: knitr
 Encoding: UTF-8
