:pencil: Adding GBIF article

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,10 @@ Version: 1.3.2
 Authors@R: c(person("Maximillian H.K.", "Hesselbarth", email = "mhk.hesselbarth@gmail.com",
              role = c("aut", "cre"), comment = c(ORCID = "0000-0003-1125-9918")),
              person("Marco", "Sciaini", email = "marco.sciaini@posteo.net",
-             role = "aut", comment = c(ORCID = '0000-0002-3042-5435')))
+             role = "aut", comment = c(ORCID = "0000-0002-3042-5435")), 
+             person("Zeke", "Marshall", email = "ee18zm@leeds.ac.uk",
+             role = "ctb", comment = c(ORCID = "0000-0001-9260-7827"))
+             )
 Maintainer: Maximillian H.K. Hesselbarth <mhk.hesselbarth@gmail.com>
 Description:
   Analyse species-habitat associations in R. Therefore, information about the location 
