Make pack/unpack available

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,11 @@ export(classify_habitats)
 export(estimate_pcf_fast)
 export(fit_point_process)
 export(list_to_randomized)
+export(pack_randomized)
 export(plot_energy)
 export(randomize_raster)
 export(reconstruct_pattern)
 export(reconstruct_pattern_marks)
 export(results_habitat_association)
 export(translate_raster)
+export(unpack_randomized)
