Remove paper.md and adding Pubs PDF

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -76,6 +76,9 @@ navbar:
         - text: "Publication Record"
           icon: fa-file-text-o
           href: articles/publication_record.html
+        - text: "JOSS Publication"
+          icon: fa-file-text-o
+          href: inst/Hesselbarth_2021_Journal_of_Open_Source_Software_6_68.pdf
 
     news:
       icon: fa-newspaper-o
