--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,6 +51,7 @@ Suggests:
     sf,
     spatstat (>= 2.0.0),
     testthat (>= 2.1.0)
+Remotes: ropensci/getCRUCLdata
 VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
