--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,7 +51,7 @@ Suggests:
     sf,
     spatstat (>= 2.0.0),
     testthat (>= 2.1.0)
-Additional_repositories: https://packages.ropensci.org/drat
+Additional_repositories: https://packages.ropensci.org
 VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
