--- a/.github/workflows/Test-coverage.yaml
+++ b/.github/workflows/Test-coverage.yaml
@@ -21,6 +21,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
         with:
           use-public-rspm: true
+          extra-repositories: 'http://packages.ropensci.org'
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
