--- a/codecov.yml
+++ b/codecov.yml
@@ -1,12 +1,8 @@
 comment: false
 
 coverage:
-  status:
-    project:
-      default:
-        target: 80%
-        threshold: 1%
-    patch:
-      default:
-        target: 80%
-        threshold: 1%
+  precision: 1
+  round: nearest
+  range: 70..100
+  target: 80%
+  threshold: 5%
