Use link to JOSS paper

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -78,7 +78,7 @@ navbar:
           href: articles/publication_record.html
         - text: "JOSS Publication"
           icon: fa-file-text-o
-          href: inst/Hesselbarth_2021_Journal_of_Open_Source_Software_6_68.pdf
+          href: https://doi.org/10.21105/joss.03811
 
     news:
       icon: fa-newspaper-o
