--- a/.github/workflows/Write-codemeta.yaml
+++ b/.github/workflows/Write-codemeta.yaml
@@ -17,9 +17,11 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          extra-repositories: 'http://packages.ropensci.org'
 
-      - uses: r-lib/actions/setup-r-dependencies@v1
+      - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: codemeta
 
