--- a/.github/workflows/Render-README.yaml
+++ b/.github/workflows/Render-README.yaml
@@ -1,13 +1,13 @@
-# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
+# Workflow derived from https://github.com/r-lib/actions/tree/master/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    paths: ['README.Rmd']
+    paths: ["README.Rmd"]
 
-name: render-rmarkdown
+name: Render-README
 
 jobs:
-  render-rmarkdown:
+  render-readme:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -20,16 +20,19 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
-        with:
-          extra-repositories: 'http://packages.ropensci.org'
 
       - uses: r-lib/actions/setup-renv@v2
 
-      - name: Render Rmarkdown files and Commit Results
+      - name: Install rmarkdown
+        run: Rscript -e 'install.packages("rmarkdown", "shar", "spatstat", "terra")'
+
+      - name: Render README files
+        run: Rscript -e 'rmarkdown::render("README.Rmd")'
+
+      - name: Commit README
         run: |
-          RMD_PATH=($(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '[.]Rmd$'))
-          Rscript -e 'for (f in commandArgs(TRUE)) if (file.exists(f)) rmarkdown::render(f)' ${RMD_PATH[*]}
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-          git commit ${RMD_PATH[*]/.Rmd/.md} -m 'Re-build Rmarkdown files' || echo "No changes to commit"
+          git add README.* man/figures/README-*
+          git commit -m "Re-build README.md" || echo "No changes to commit"
           git push origin || echo "No changes to commit"
