--- a/.github/workflows/Render-README.yaml
+++ b/.github/workflows/Render-README.yaml
@@ -19,6 +19,10 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v2
 
+      - name : Install spatial dependencies
+        if: runner.os == 'Linux'
+        run: sudo apt install libgdal-dev
+
       - uses: r-lib/actions/setup-r@v2
 
       - uses: r-lib/actions/setup-renv@v2
