--- a/.github/workflows/Render-README.yaml
+++ b/.github/workflows/Render-README.yaml
@@ -24,6 +24,8 @@ jobs:
         run: sudo apt install libgdal-dev
 
       - uses: r-lib/actions/setup-r@v2
+        with:
+          extra-repositories: 'http://packages.ropensci.org'
 
       - uses: r-lib/actions/setup-renv@v2
 
