--- a/.github/workflows/Deploy-pkgdown.yaml
+++ b/.github/workflows/Deploy-pkgdown.yaml
@@ -1,4 +1,4 @@
-# Workflow derived from https://github.com/r-lib/actions/tree/master/examples
+# Workflow derived from https://github.com/r-lib/actions/tree/v2-branch/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 
 on:
@@ -27,6 +27,10 @@ jobs:
         with:
           extra-packages: any::pkgdown, local::.
           needs: website
+
+      - name: Install getCRUCLdata
+        run: install.packages('getCRUCLdata', repos = 'http://packages.ropensci.org', typ = 'source')
+        shell: Rscript {0}
 
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
