--- a/.github/workflows/Render-README.yaml
+++ b/.github/workflows/Render-README.yaml
@@ -9,28 +9,24 @@ name: render-readme
 jobs:
   render-readme:
     runs-on: ubuntu-latest
+
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+      - uses: actions/checkout@v3
 
       - uses: r-lib/actions/setup-pandoc@v2
 
-      - name : Install spatial dependencies
-        if: runner.os == 'Linux'
-        run: sudo apt install libgdal-dev
-
       - uses: r-lib/actions/setup-r@v2
         with:
+          use-public-rspm: true
           extra-repositories: 'http://packages.ropensci.org'
 
-      - uses: r-lib/actions/setup-renv@v2
-
-      - name: Install rmarkdown
-        run: Rscript -e 'install.packages(c("rmarkdown", "shar", "spatstat", "terra"))'
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::rmarkdown, any::spatstat, any::terra
+          needs: check
 
       - name: Render README files
         run: Rscript -e 'rmarkdown::render("README.Rmd")'
