--- a/.github/workflows/Write-codemeta.yaml
+++ b/.github/workflows/Write-codemeta.yaml
@@ -9,21 +9,20 @@ name: write-codemeta
 jobs:
   render-readme:
     runs-on: ubuntu-latest
+
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+      - uses: actions/checkout@v3
 
       - uses: r-lib/actions/setup-r@v2
         with:
+          use-public-rspm: true
           extra-repositories: 'http://packages.ropensci.org'
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::codemeta
+      - name: Install codemeta
+        run: Rscript -e 'install.packages("codemeta")'
 
       - name: Write codemeta file
         run: Rscript -e 'codemeta::write_codemeta()'
