--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -5,6 +5,7 @@ on:
     branches: [CRAN, main, development]
   pull_request:
     branches: [CRAN, main]
+  workflow_dispatch:
 
 name: r-cmd-check
 
@@ -36,6 +37,7 @@ jobs:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
+          extra-repositories: 'http://packages.ropensci.org'
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
