--- a/.github/workflows/Render-README.yaml
+++ b/.github/workflows/Render-README.yaml
@@ -3,6 +3,7 @@
 on:
   push:
     paths: ["README.Rmd"]
+  workflow_dispatch:
 
 name: render-readme
 
@@ -21,6 +22,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
+          extra-repositories: 'http://packages.ropensci.org'
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
