--- a/.github/workflows/Test-coverage.yaml
+++ b/.github/workflows/Test-coverage.yaml
@@ -5,6 +5,7 @@ on:
     branches: [CRAN, main, development]
   pull_request:
     branches: [CRAN, main]
+  workflow_dispatch:
 
 name: test-coverage
 
@@ -22,6 +23,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
+          extra-repositories: 'http://packages.ropensci.org'
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
