--- a/.github/workflows/Deploy-pkgdown.yaml
+++ b/.github/workflows/Deploy-pkgdown.yaml
@@ -24,12 +24,17 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-          extra-repositories: 'http://packages.ropensci.org'
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, local::.
+          extra-packages: any::pkgdown, any::ggplot2, any::future, any::future.apply,
+                          any::patchwork, any::rgbif, any::rgdal, any::rnaturalearth,
+                          any::rnaturalearthdata, any::sf, local::.
           needs: website
+
+      - name: Install getCRUCLdata
+        run: install.packages('getCRUCLdata', repos = 'http://packages.ropensci.org', typ = 'source')
+        shell: Rscript {0}
 
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
