--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,18 +1,15 @@
-^CRAN-RELEASE$
-^.*\.Rproj$
-^\.Rproj\.user$
-^README.*$
-^cran-comments\.md$
-^docs$
-^CODE_OF_CONDUCT.*$
-^vignettes/articles$
+codecov.yml
+codemeta.json
+CODE_OF_CONDUCT.md
+CONTRIBUTING.md
+cran-comments.md
+data-raw
+docs
+LICENSE.md
+pkgdown
+README.Rmd
+README.md
+shar.Rproj
 vignettes/articles
-^data-raw$
-^_pkgdown\.yml$
-^codecov\.yml$
-^CONTRIBUTING.*$
-^pkgdown$
-^\.github$
-^LICENSE\.md$
-^CRAN-SUBMISSION$
-^CODE_OF_CONDUCT\.md$
+.github
+_pkgdown.yml
