--- a/.github/workflows/Render-README.yaml
+++ b/.github/workflows/Render-README.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rmarkdown, any::spatstat, any::terra
+          extra-packages: any::rmarkdown, any::spatstat, any::terra, local::.
 
       - name: Render README files
         run: Rscript -e 'rmarkdown::render("README.Rmd")'
