--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     graphics,
     grDevices,
     methods,
-    spatstat.core,
+    spatstat.explore,
+    spatstat.model,
     spatstat.geom,
     spatstat.random,
     stats,
