--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -82,7 +82,7 @@ navbar:
 
     contact:
       icon: fa-user
-      hreft: https://mhesselbarth.rbind.io
+      hreft: https://www.maxhesselbarth.com
 
 home:
   sidebar:
