--- a/.github/workflows/Deploy-pkgdown.yaml
+++ b/.github/workflows/Deploy-pkgdown.yaml
@@ -32,7 +32,7 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::pkgdown, any::ggplot2, any::future, any::future.apply,
-                          any::patchwork, any::rgbif, any::rgdal, any::rnaturalearth,
+                          any::patchwork, any::rgbif, any::rnaturalearth,
                           any::rnaturalearthdata, any::sf, local::.
           needs: website
 
