Rename and import updates to reconstruct_pattern_multi

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(plot_energy)
 export(randomize_raster)
 export(reconstruct_pattern)
 export(reconstruct_pattern_marks)
+export(reconstruct_pattern_multi)
 export(results_habitat_association)
 export(translate_raster)
 export(unpack_randomized)
