--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -33,8 +33,6 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v2
 
-      # - uses: r-lib/actions/setup-tinytex@v2
-
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
@@ -48,6 +46,5 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("--no-manual", "--as-cran")'
-          error_on: '"warning"'
+          args: 'c("--as-cran")'
           upload-snapshots: true
