--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -60,12 +60,15 @@ navbar:
       icon: fa-graduation-cap
       text: "More"
       menu:
-        - text: "Reconstruct multiple pattern"
-          icon: fa-book
-          href: articles/reconstruct_multiple_patterns.html
         - text: "Parallelization"
           icon: fa-book
           href: articles/parallelization.html
+        - text: "Reconstruct multiple patterns"
+          icon: fa-book
+          href: articles/reconstruct_multiple_patterns.html
+        - text: "Multi-trait pattern reconstruction"
+          icon: fa-book
+          href: articles/reconstruct_multiple_patterns.html
         - text: "Analysing the climatic niche of Cormus domestica"
           icon: fa-book
           href: articles/cormus_domestica_tmp.html
