--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -63,12 +63,12 @@ navbar:
         - text: "Parallelization"
           icon: fa-book
           href: articles/parallelization.html
-        - text: "Reconstruct multiple patterns"
+        - text: "Reconstruct several patterns"
           icon: fa-book
-          href: articles/reconstruct_multiple_patterns.html
+          href: articles/reconstruct_several_patterns.html
         - text: "Multi-trait pattern reconstruction"
           icon: fa-book
-          href: articles/reconstruct_multiple_patterns.html
+          href: articles/reconstruct_multi_patterns.html
         - text: "Analysing the climatic niche of Cormus domestica"
           icon: fa-book
           href: articles/cormus_domestica_tmp.html
