Fix plot_sum_stat (had to remove ggplot2) and upadate vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(fit_point_process)
 export(list_to_randomized)
 export(pack_randomized)
 export(plot_energy)
+export(plot_sum_stat)
 export(randomize_raster)
 export(reconstruct_pattern)
 export(reconstruct_pattern_marks)
